# GOTURN_KCF

./: CMakeLists.txt  vot_test_record
scripts/: runTracker.sh
src/goturn/helper/: bounding_box.h
src/goturn/loader/: loader_base.cpp  loader_base.h
src/goturn/network/: regressor.cpp  regressor.h
src/goturn/tracker/: tracker.cpp  tracker.h
src/goturn/visualizer/: runTracker.cpp
src/kcf/: runtracker.cpp
